build_log_ui_5.txt
> Task :app:preBuild UP-TO-DATE
> Task :app:preDebugBuild UP-TO-DATE
> Task :app:mergeDebugNativeDebugMetadata NO-SOURCE
> Task :app:dataBindingMergeDependencyArtifactsDebug UP-TO-DATE
> Task :app:generateDebugResValues UP-TO-DATE
> Task :app:generateDebugResources UP-TO-DATE
> Task :app:mergeDebugResources UP-TO-DATE
> Task :app:packageDebugResources UP-TO-DATE
> Task :app:processDebugNavigationResources UP-TO-DATE
> Task :app:parseDebugLocalResources UP-TO-DATE
> Task :app:dataBindingGenBaseClassesDebug UP-TO-DATE
> Task :app:javaPreCompileDebug UP-TO-DATE
> Task :app:checkDebugAarMetadata UP-TO-DATE
> Task :app:compileDebugNavigationResources UP-TO-DATE
> Task :app:mapDebugSourceSetPaths UP-TO-DATE
> Task :app:createDebugCompatibleScreenManifests UP-TO-DATE
> Task :app:extractDeepLinksDebug UP-TO-DATE
> Task :app:processDebugMainManifest UP-TO-DATE
> Task :app:processDebugManifest UP-TO-DATE
> Task :app:processDebugManifestForPackage UP-TO-DATE
> Task :app:processDebugResources UP-TO-DATE

> Task :app:compileDebugJavaWithJavac
C:\Users\Laptop\AndroidStudioProjects\MySoftPOS\app\src\main\java\com\example\mysoftpos\data\local\TransactionEntity.java:8: warning: There are multiple good constructors and Room will pick the no-arg constructor. You can use the @Ignore annotation to eliminate unwanted constructors.
public class TransactionEntity {
       ^
C:\Users\Laptop\AndroidStudioProjects\MySoftPOS\app\src\main\java\com\example\mysoftpos\data\local\TransactionEntity.java:8: warning: There are multiple good constructors and Room will pick the no-arg constructor. You can use the @Ignore annotation to eliminate unwanted constructors.
public class TransactionEntity {
       ^
C:\Users\Laptop\AndroidStudioProjects\MySoftPOS\app\src\main\java\com\example\mysoftpos\data\local\TransactionDao.java:20: error: There is a problem with the query: [SQLITE_ERROR] SQL error or missing database (no such column: trace_number)
    void updateStatus(String traceNumber, String newStatus);
         ^
C:\Users\Laptop\AndroidStudioProjects\MySoftPOS\app\src\main\java\com\example\mysoftpos\data\local\TransactionDao.java:23: error: There is a problem with the query: [SQLITE_ERROR] SQL error or missing database (no such column: response_hex)
    void updateResponse(String traceNumber, String responseHex, String status);
         ^
C:\Users\Laptop\AndroidStudioProjects\MySoftPOS\app\src\main\java\com\example\mysoftpos\data\local\TransactionDao.java:26: error: There is a problem with the query: [SQLITE_ERROR] SQL error or missing database (no such column: trace_number)
    TransactionEntity getByTraceNumber(String traceNumber);
                      ^
C:\Users\Laptop\AndroidStudioProjects\MySoftPOS\app\src\main\java\com\example\mysoftpos\data\local\TransactionDao.java:26: error: Not sure how to convert a Cursor to this method's return type (com.example.mysoftpos.data.local.TransactionEntity).
    TransactionEntity getByTraceNumber(String traceNumber);
                      ^
4 errors
2 warnings

> Task :app:compileDebugJavaWithJavac FAILED

[Incubating] Problems report is available at: file:///C:/Users/Laptop/AndroidStudioProjects/MySoftPOS/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':app:compileDebugJavaWithJavac'.
> Compilation failed; see the compiler output below.
  C:\Users\Laptop\AndroidStudioProjects\MySoftPOS\app\src\main\java\com\example\mysoftpos\data\local\TransactionEntity.java:8: warning: There are multiple good constructors and Room will pick the no-arg constructor. You can use the @Ignore annotation to eliminate unwanted constructors.
  public class TransactionEntity {
         ^
  C:\Users\Laptop\AndroidStudioProjects\MySoftPOS\app\src\main\java\com\example\mysoftpos\data\local\TransactionDao.java:20: error: There is a problem with the query: [SQLITE_ERROR] SQL error or missing database (no such column: trace_number)
      void updateStatus(String traceNumber, String newStatus);
           ^
  C:\Users\Laptop\AndroidStudioProjects\MySoftPOS\app\src\main\java\com\example\mysoftpos\data\local\TransactionDao.java:23: error: There is a problem with the query: [SQLITE_ERROR] SQL error or missing database (no such column: response_hex)
      void updateResponse(String traceNumber, String responseHex, String status);
           ^
  C:\Users\Laptop\AndroidStudioProjects\MySoftPOS\app\src\main\java\com\example\mysoftpos\data\local\TransactionDao.java:26: error: There is a problem with the query: [SQLITE_ERROR] SQL error or missing database (no such column: trace_number)
      TransactionEntity getByTraceNumber(String traceNumber);
                        ^
  C:\Users\Laptop\AndroidStudioProjects\MySoftPOS\app\src\main\java\com\example\mysoftpos\data\local\TransactionDao.java:26: error: Not sure how to convert a Cursor to this method's return type (com.example.mysoftpos.data.local.TransactionEntity).
      TransactionEntity getByTraceNumber(String traceNumber);
                        ^
  4 errors
  2 warnings

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to get full insights.

BUILD FAILED in 4s
19 actionable tasks: 1 executed, 18 up-to-date
